[package]
name = "osmsg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
windows = "0.39.0"
features = [
	"Data_Xml_Dom",
	"Foundation",
    "UI",
	"UI_Notifications",
]

# [target.'cfg(macos)'.dependencies]
# [target.'cfg(unix)'.dependencies]
# [target.'cfg(windows)'.dependencies]